--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
     </p>
     <h2>Contact us</h2>
     <p class="contact">For inquiries, bookings, or just to share your travel stories, reach out to us at:</p>
-    <p class="contact"><i class="fa-solid fa-envelope"></i><b> Email:</b> chaloindia91@gmail.com</p>
+    <p class="contact"><i class="fa-solid fa-envelope"></i><b> Email:</b><ul> <li>chaloindia1@gmail.com</li>
+    <li>chaloindia2@gmail.com</li>
+    <li>chaloindia3@gmail.com</li></ul></p>
     <p class="contact"><i class="fa-solid fa-phone"></i><b> Phone:</b> +91 98493 34956</p>
     <p class="contact">Follow us on social media for travel tips, stories, and more:</p>
     <p class="contact"><i class="fa-brands fa-facebook"></i><b> Facebook:</b> /ChaloIndia</p>
