--- a/index.html
+++ b/index.html
@@ -94,13 +94,15 @@
     <p class="contact"><i class="fa-solid fa-envelope"></i><b> Email:</b><ul> <li>chaloindia1@gmail.com</li>
     <li>chaloindia2@gmail.com</li>
     <li>chaloindia3@gmail.com</li></ul></p>
-    <p class="contact"><i class="fa-solid fa-phone"></i><b> Phone:</b> +91 98493 34956</p>
+    <p class="contact"><i class="fa-solid fa-phone"></i><b> Phone:</b><ul><li>222-555-401</li>
+    <li>222-555-402</li>
+    <li>222-555-403</li></ul></p>
     <p class="contact">Follow us on social media for travel tips, stories, and more:</p>
     <p class="contact"><i class="fa-brands fa-facebook"></i><b> Facebook:</b> /ChaloIndia</p>
     <p class="contact"><i class="fa-brands fa-instagram"></i><b> Instagram:</b> @Chalo_India</p>
   </div>
   <footer>
-    <p>&copy; 2023 Chalo India. All rights reserved.</p>
+    <p>&copy; 2025 Chalo India. All rights reserved.</p>
   </footer>
 <script src="main.js"></script>
 </body>
