--- a/tajmahal.html
+++ b/tajmahal.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -9,7 +9,7 @@
 <body>
 
   <nav>
-    <a href="historical.html">← Back to Historical Places</a>
+    <a href="hisplace.html">← Back to Historical Places</a>
   </nav>
   
 
