--- a/qutubminar.html
+++ b/qutubminar.html
@@ -9,7 +9,7 @@
 <body>
 
   <nav>
-    <a href="historical.html">← Back to Historical Places</a>
+    <a href="hisplace.html">← Back to Historical Places</a>
   </nav>
   
 
