--- a/bagabeach.html
+++ b/bagabeach.html
@@ -9,7 +9,7 @@
 <body>
 
   <nav>
-    <a href="beaches.html">←Back to Beaches</a>
+    <a href="bcplace.html">←Back to Beaches</a>
   </nav>
   
 
@@ -20,8 +20,8 @@
       <img id="main" src="baga1.jpg" alt="Main View" />
     </div>
     <div class="thumbnails">
-      <img src="baga3.jpg" alt="Taj 2" onclick="swapImage(this)" />
-      <img src="baga2.jpg" alt="Taj 3" onclick="swapImage(this)" />
+      <img src="baga3.jpg" alt="baga 2" onclick="swapImage(this)" />
+      <img src="baga2.jpg" alt="baga 3" onclick="swapImage(this)" />
     </div>
   </div>
 
