--- a/radhanagarbeach.html
+++ b/radhanagarbeach.html
@@ -9,7 +9,7 @@
 <body>
 
   <nav>
-    <a href="beaches.html">←Back to Beaches</a>
+    <a href="bcplaces.html">←Back to Beaches</a>
   </nav>
   
 
