--- a/marinabeach.html
+++ b/marinabeach.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Baga Beach- GOA</title>
+  <title>Marina Beach</title>
   <link rel="stylesheet" href="beaches.css" />
 </head>
 <body>
 
   <nav>
-    <a href="beaches.html">←Back to Beaches</a>
+    <a href="bcplaces.html">←Back to Beaches</a>
   </nav>
   
 
