--- a/ooty.html
+++ b/ooty.html
@@ -9,7 +9,7 @@
 <body>
 
   <nav>
-    <a href="hillstation.html">← Back to hillstations</a>
+    <a href="hillplaces.html">← Back to hillstations</a>
   </nav>
   
 
