--- a/Munnar.html
+++ b/Munnar.html
@@ -9,7 +9,7 @@
 <body>
 
   <nav>
-    <a href="hillstation.html">← Back to Hill Stations</a>
+    <a href="hillplaces.html">← Back to Hill Stations</a>
   </nav>
 
   <h1>🌿 Munnar, Kerala</h1>
