--- a/somnath.html
+++ b/somnath.html
@@ -9,7 +9,7 @@
 <body>
 
   <nav>
-    <a href="spiritual.html">← Back to Spiritual Places</a>
+    <a href="spplaces.html">← Back to Spiritual Places</a>
   </nav>
   
 
