--- a/jimcobertt.html
+++ b/jimcobertt.html
@@ -9,7 +9,7 @@
 <body>
 
   <nav>
-    <a href="wildlife.html">← Back to wildlife page</a>
+    <a href="wildlfplacs.html">← Back to wildlife page</a>
   </nav>
   
 
