--- a/hodka.html
+++ b/hodka.html
@@ -9,7 +9,7 @@
 <body>
 
   <nav>
-    <a href="rural.html">← Back to Rural & Village Tourism</a>
+    <a href="ruralplaces.html">← Back to Rural & Village Tourism</a>
   </nav>
 
   <h1> Hodka Village, Gujarat</h1>
