--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <p>Visit holy sites like Varanasi, Tirupati, and the Golden Temple for peace and prayer.</p>
     </div></a>
 
-    <a href="wildlfplaces.html"><div class="category-card" id="wilds">
+    <a href="wildlfplacs.html"><div class="category-card" id="wilds">
       <h2>Wildlife & Nature Reserves</h2>
       <p>Spot tigers, elephants and more in Ranthambore, Kaziranga, and Jim Corbett parks.</p>
     </div></a>
