--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <p>Visit holy sites like Varanasi, Tirupati, and the Golden Temple for peace and prayer.</p>
     </div></a>
 
-    <a href="wildlfplacs.html"><div class="category-card" id="wilds">
+    <a href="wildlfplaces.html"><div class="category-card" id="wilds">
       <h2>Wildlife & Nature Reserves</h2>
       <p>Spot tigers, elephants and more in Ranthambore, Kaziranga, and Jim Corbett parks.</p>
     </div></a>
@@ -91,18 +91,40 @@
     </p>
     <h2>Contact us</h2>
     <p class="contact">For inquiries, bookings, or just to share your travel stories, reach out to us at:</p>
-    <p class="contact"><i class="fa-solid fa-envelope"></i><b> Email:</b><ul> <li>chaloindia1@gmail.com</li>
-    <li>chaloindia2@gmail.com</li>
-    <li>chaloindia3@gmail.com</li></ul></p>
-    <p class="contact"><i class="fa-solid fa-phone"></i><b> Phone:</b><ul><li>222-555-401</li>
-    <li>222-555-402</li>
-    <li>222-555-403</li></ul></p>
+    <p class="contact"><i class="fa-solid fa-envelope"></i><b> Email:</b> chaloindia91@gmail.com</p>
+    <p class="contact"><i class="fa-solid fa-phone"></i><b> Phone:</b> +91 98493 34956</p>
     <p class="contact">Follow us on social media for travel tips, stories, and more:</p>
     <p class="contact"><i class="fa-brands fa-facebook"></i><b> Facebook:</b> /ChaloIndia</p>
     <p class="contact"><i class="fa-brands fa-instagram"></i><b> Instagram:</b> @Chalo_India</p>
   </div>
+  <section id="contact">
+  <h2>Meet the Team Behind the Website</h2>
+  <div class="contact-container">
+    <div class="contact-card">
+      <h3>Dhedeepya Avuthu</h3>
+      <p>Roll no. AM.SC.U4CSE24211</p>
+      <p>Portfolio: <a href="https://Dhedeepya0707.github.io/Task1-portfolio-" target="_blank">Project Phase-1</a></p>
+    </div>
+    <div class="contact-card">
+      <h3>Yasaswi Maragada</h3>
+      <p>Roll no. AM.SC.U4CSE24235</p>
+      <p>Portfolio: <a href="https://yasaswi200716.github.io/project1/" target="_blank">Project Phase-1</a></p>
+    </div>
+    <div class="contact-card">
+      <h3>Sailaja Reddy Nandyala</h3>
+      <p>Roll no. AM.SC.U4CSE24241</p>
+      <p>Portfolio: <a href="https://sailajareddy-1206.github.io/projectphase1/" target="_blank">Project Phase-1</a></p>
+    </div>
+    <div class="contact-card">
+      <h3>Niharika Vadithya</h3>
+      <p>Roll no. AM.SC.U4CSE24259</p>
+      <p>Portfolio: <a href="https://niharika99-hub.github.io/vadithya-niharika/" target="_blank">Project Phase-1</a></p>
+    </div>
+  </div>
+</section>
+
   <footer>
-    <p>&copy; 2025 Chalo India. All rights reserved.</p>
+    <p>&copy; 2023 Chalo India. All rights reserved.</p>
   </footer>
 <script src="main.js"></script>
 </body>
