--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     </p>
     <h2>Contact us</h2>
     <p class="contact">For inquiries, bookings, or just to share your travel stories, reach out to us at:</p>
-    <p class="contact"><i class="fa-solid fa-envelope"></i><b> Email:</b> chaloindia91@gmail.com</p>
-    <p class="contact"><i class="fa-solid fa-phone"></i><b> Phone:</b> +91 98493 34956</p>
+    <p class="contact"><i class="fa-solid fa-envelope"></i><b> Email:</b> chaloindia91@gmail.com , chaloindia92@gmail.com, chaloindia93@gmai.com</p>
+    <p class="contact"><i class="fa-solid fa-phone"></i><b> Phone:</b> +91 999 344 511, +91 999 344 611, +91 999 344 711</p>
     <p class="contact">Follow us on social media for travel tips, stories, and more:</p>
     <p class="contact"><i class="fa-brands fa-facebook"></i><b> Facebook:</b> /ChaloIndia</p>
     <p class="contact"><i class="fa-brands fa-instagram"></i><b> Instagram:</b> @Chalo_India</p>
@@ -124,7 +124,7 @@
 </section>
 
   <footer>
-    <p>&copy; 2023 Chalo India. All rights reserved.</p>
+    <p>&copy; 2025 Chalo India. All rights reserved.</p>
   </footer>
 <script src="main.js"></script>
 </body>
