--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         <li><a href="#saffron"><i class="fa-solid fa-house"></i> Home</a></li>
         <li><a href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Login</a></li>
         <li><a href="#white"><i class="fa-solid fa-magnifying-glass"></i> Explore</a></li>
+        <li><a href="plan-trip.html"><i class="fa-solid fa-map"></i> Plan My Trip</a></li>
         <li><a href="#green"><i class="fa-solid fa-phone"></i> Contact us</a></li>
       </ul>
     </nav>
   </header>
-  <section id="saffron">
+   <section id="saffron">
   <div class="saffron-section" >
     <div id="main">
       <div id = "head">
@@ -36,8 +37,6 @@
       natural beauty, or delicious cuisine, India welcomes you with open arms and endless possibilities.</div>
   </div>
   </section>
-
-  
 
   <div class="white-section" id="white">
     <div class="section-heading">
@@ -76,7 +75,23 @@
       <p>Experience traditional life in rural India—Rajasthan, Gujarat, and Kerala villages await.</p>
     </div></a>
   </div>
+  </div><section id="testimonials">
+  <h2>What Our Travelers Say</h2>
+  <div class="testimonial-container">
+    <div class="testimonial-card">
+      <p>"Exploring Rajasthan with Chalo India was unforgettable! The guides were amazing."</p>
+      <h3>- Priya S., Mumbai</h3>
+    </div>
+    <div class="testimonial-card">
+      <p>"The beaches of Goa were a dream come true, thanks to the perfect itinerary!"</p>
+      <h3>- Arjun K., Delhi</h3>
+    </div>
+    <div class="testimonial-card">
+      <p>"Varanasi’s spiritual vibe was beautifully curated by the team."</p>
+      <h3>- Sneha R., Bangalore</h3>
+    </div>
   </div>
+</section>
 
   <div class="green-section" id="green">
     <h2 id="aboutus">&#127759;About us</h2>
@@ -89,43 +104,26 @@
     <p  class="thispara" style="margin-top: 5px;">Because with us, you don’t just visit India – you live it.
       Let’s make your journey through India a story worth telling.
     </p>
+    <div class="newsletter">
+  <h2>Join Our Travel Community</h2>
+  <p>Subscribe for exclusive travel tips, itineraries, and offers!</p>
+  <form id="newsletter-form">
+    <input type="email" placeholder="Enter your email" required>
+    <button type="submit">Subscribe</button>
+  </form>
+</div>
     <h2>Contact us</h2>
     <p class="contact">For inquiries, bookings, or just to share your travel stories, reach out to us at:</p>
-    <p class="contact"><i class="fa-solid fa-envelope"></i><b> Email:</b> chaloindia91@gmail.com , chaloindia92@gmail.com, chaloindia93@gmai.com</p>
-    <p class="contact"><i class="fa-solid fa-phone"></i><b> Phone:</b> +91 999 344 511, +91 999 344 611, +91 999 344 711</p>
+    <p class="contact"><i class="fa-solid fa-envelope"></i><b> Email:</b> chaloindia91@gmail.com, chaloindia92@gmail.com</p>
+    <p class="contact"><i class="fa-solid fa-phone"></i><b> Phone:</b> +91 98493 34956, +91 98492 45859</p>
     <p class="contact">Follow us on social media for travel tips, stories, and more:</p>
     <p class="contact"><i class="fa-brands fa-facebook"></i><b> Facebook:</b> /ChaloIndia</p>
     <p class="contact"><i class="fa-brands fa-instagram"></i><b> Instagram:</b> @Chalo_India</p>
   </div>
-  <section id="contact">
-  <h2>Meet the Team Behind the Website</h2>
-  <div class="contact-container">
-    <div class="contact-card">
-      <h3>Dhedeepya Avuthu</h3>
-      <p>Roll no. AM.SC.U4CSE24211</p>
-      <p>Portfolio: <a href="https://Dhedeepya0707.github.io/Task1-portfolio-" target="_blank">Project Phase-1</a></p>
-    </div>
-    <div class="contact-card">
-      <h3>Yasaswi Maragada</h3>
-      <p>Roll no. AM.SC.U4CSE24235</p>
-      <p>Portfolio: <a href="https://yasaswi200716.github.io/project1/" target="_blank">Project Phase-1</a></p>
-    </div>
-    <div class="contact-card">
-      <h3>Sailaja Reddy Nandyala</h3>
-      <p>Roll no. AM.SC.U4CSE24241</p>
-      <p>Portfolio: <a href="https://sailajareddy-1206.github.io/projectphase1/" target="_blank">Project Phase-1</a></p>
-    </div>
-    <div class="contact-card">
-      <h3>Niharika Vadithya</h3>
-      <p>Roll no. AM.SC.U4CSE24259</p>
-      <p>Portfolio: <a href="https://niharika99-hub.github.io/vadithya-niharika/" target="_blank">Project Phase-1</a></p>
-    </div>
-  </div>
-</section>
-
   <footer>
     <p>&copy; 2025 Chalo India. All rights reserved.</p>
   </footer>
 <script src="main.js"></script>
+<button class="back-to-top" onclick="scrollToTop()">↑ Top</button>
 </body>
 </html>
