--- a/plan-trip.html
+++ b/plan-trip.html
@@ -217,11 +217,11 @@
         <div class="web">Chalo India...🛕</div>
         <nav>
             <ul class="nav-links">
-                <li><a href="home.html"><i class="fa-solid fa-house"></i> Home</a></li>
+                <li><a href="index.html"><i class="fa-solid fa-house"></i> Home</a></li>
                 <li><a href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Login</a></li>
-                <li><a href="home.html#white"><i class="fa-solid fa-magnifying-glass"></i> Explore</a></li>
+                <li><a href="index.html#white"><i class="fa-solid fa-magnifying-glass"></i> Explore</a></li>
                 <li><a href="plan-trip.html"><i class="fa-solid fa-map"></i> Plan My Trip</a></li>
-                <li><a href="home.html#green"><i class="fa-solid fa-phone"></i> Contact us</a></li>
+                <li><a href="index.html#green"><i class="fa-solid fa-phone"></i> Contact us</a></li>
             </ul>
         </nav>
     </header>
