--- a/plan-trip.html
+++ b/plan-trip.html
@@ -186,7 +186,7 @@
 
         @media (max-width: 768px) {
             header {
-                flex-direction: snowfall;
+                flex-direction: column;
                 align-items: flex-start;
                 padding: 15px 20px;
             }
