--- a/index.html
+++ b/index.html
@@ -120,6 +120,33 @@
     <p class="contact"><i class="fa-brands fa-facebook"></i><b> Facebook:</b> /ChaloIndia</p>
     <p class="contact"><i class="fa-brands fa-instagram"></i><b> Instagram:</b> @Chalo_India</p>
   </div>
+  <section id="contact">
+  <h2>Meet the Team Behind the Website</h2>
+  <div class="contact-container">
+    <div class="contact-card">
+      <h3>Dhedeepya Avuthu</h3>
+      <p>Roll no. AM.SC.U4CSE24211</p>
+      <p>Portfolio: <a href="https://Dhedeepya0707.github.io/Task1-portfolio-" target="_blank">Project Phase-1</a></p>
+    </div>
+    <div class="contact-card">
+      <h3>Yasaswi Maragada</h3>
+      <p>Roll no. AM.SC.U4CSE24235</p>
+      <p>Portfolio: <a href="https://yasaswi200716.github.io/project1/" target="_blank">Project Phase-1</a></p>
+    </div>
+    <div class="contact-card">
+      <h3>Sailaja Reddy Nandyala</h3>
+      <p>Roll no. AM.SC.U4CSE24241</p>
+      <p>Portfolio: <a href="https://sailajareddy-1206.github.io/projectphase1/" target="_blank">Project Phase-1</a></p>
+      </div>
+    <div class="contact-card">
+      <h3>Niharika Vadithya</h3>
+      <p>Roll no. AM.SC.U4CSE24259</p>
+      <p>Portfolio: <a href="https://niharika99-hub.github.io/vadithya-niharika/" target="_blank">Project Phase-1</a></p>
+    </div>
+  </div>
+</section>
+
+
   <footer>
     <p>&copy; 2025 Chalo India. All rights reserved.</p>
   </footer>
