--- a/hisplace.html
+++ b/hisplace.html
@@ -148,7 +148,7 @@
     </div>
     <div id="details-box" class="details-box hidden"></div>
   </section>
-  <script src="places.js"></script>
+  <script src="hisplaces.js"></script>
 </body>
 
 </html>
